# rul_final

./: README.md  config.json  config.py  data_generator.py  docker-compose.yml  full_client.py  main.py  minmax_scaler_output.pkl  rul_days.py  secret.yaml  start_twin.sh  train_dummy_models.py
GeneratedDataset/: 2026-04-01_Unit1.parquet  2026-04-02_Unit1.parquet
PredictedDataset/: 2026-04-01_Predicted.parquet  2026-04-02_Predicted.parquet
explorer-db/: sqlite.db
model_repository/isolation_forest/: config.pbtxt
model_repository/isolation_forest/1/: model.joblib  model.py
model_repository/lstm/: config.pbtxt
model_repository/lstm/1/model.savedmodel/: fingerprint.pb  saved_model.pb
model_repository/lstm/1/model.savedmodel/variables/: variables.data-00000-of-00001  variables.index
rul_package/: MANIFEST.in  pyproject.toml  setup.py
rul_package/nvidia_twin/: .env  cli.py  config.py  data_generator.py  full_client.py  main.py  minmax_scaler.pkl  rul_days.py
rul_package/src/: App.jsx
rul_package/ui-dashboard/: index.html  package-lock.json  package.json  vite.config.js
rul_package/ui-dashboard/src/: App.jsx
ui-dashboard/: LICENSE.txt  README.md  index.html  package-lock.json  package.json  stream.config.json  vite.config.ts
ui-dashboard/src/: App.css  App.tsx  AppStream.jsx  BackgroundControls.jsx  ColorControls.jsx  InfoCard.jsx  Window.jsx  index.css  main.tsx
